--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -26,41 +26,41 @@
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Associate Professor
+      institution: Universidade Federal do Rio de Janeiro, Rio de Janeiro, Brazil
+      year: 2024 - now
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Professor of Molecular Engineering in the Chemical Engineering Program (PEQ) at COPPE/UFRJ.
+    - title: Postdoctoral Researcher
+      institution: Universidade Federal do Rio de Janeiro, Rio de Janeiro, Brazil
+      year: 2020 - 2024
       description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+        - Researcher in the ATOMS group at the School of Chemistry at UFRJ.
+        - Development of numerical methods for simulating classical Density Functional Theory.
+    - title: Postdoctoral Fellow
+      institution: Interdisciplinary Center for Fluid Dynamics (NIDF), Rio de Janeiro, Brazil
+      year: 2017 - 2019
       description:
+        - Research in the field of fluid dynamics and turbulence.
+        - Development of numerical methods for simulating complex fluid flows.
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: PhD Student
+      institution: Universidade Federal do Rio de Janeiro, Rio de Janeiro, Brazil
+      year: 2012 - 2017
+      description:
+        - Doctoral research in the ICE group, focusing on Non-Equilibrium Thermodynamics applied to Type Ia Supernova explosions.
+
+    - title: Lecturer (substitute) of Physics
+      institution: Universidade Federal do Rio de Janeiro, Rio de Janeiro, Brazil
+      year: 2017 - 2018, 2013 - 2014
+      description:
+        - Disciplines of Mechanics (Physics I), Thermodynamics and Vibrations (Physics II) and Electromagnetism (Physics III) for undergraduate students.
 
 - title: Open Source Projects
   type: time_table
   contents:
     - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
+      year: 2023-now
       description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
 - title: Honors and Awards
